--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -46,6 +46,22 @@
         android:selectAllOnFocus="true"
         tools:layout_editor_absoluteY="165dp" />
 
+        <EditText
+            android:id="@+id/email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="50px"
+            android:layout_marginEnd="24dp"
+            android:hint="@string/prompt_email"
+            android:imeActionLabel="@string/action_sign_in_short"
+            android:imeOptions="actionDone"
+            android:inputType="text"
+            android:selectAllOnFocus="true"
+            tools:layout_editor_absoluteY="165dp" />
+
     <Button
         android:id="@+id/login"
         android:layout_width="match_parent"
