--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         android:orientation="vertical">
 
         <Button
-            android:id="@+id/btn_fragment"
+            android:id="@+id/activeFlash"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Activer le flash" />
