--- a/app/src/main/res/layout/dialog_design.xml
+++ b/app/src/main/res/layout/dialog_design.xml
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:gravity="center"
+            android:gravity="left"
             android:inputType="textPersonName"
             android:text="First Name"
             android:textSize="24sp" />
@@ -47,7 +47,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:gravity="center"
+            android:gravity="left"
             android:inputType="textPersonName"
             android:text="Name"
             android:textSize="24sp" />
@@ -71,7 +71,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:gravity="center"
+            android:gravity="left"
             android:inputType="textPersonName"
             android:text="To Pay"
             android:textSize="24sp" />
@@ -95,7 +95,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:gravity="center"
+            android:gravity="left"
             android:inputType="textPersonName"
             android:text="Has Paid"
             android:textSize="24sp" />
@@ -120,7 +120,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:gravity="center"
+            android:gravity="left"
             android:inputType="textPersonName"
             android:text="Already Scanned"
             android:textSize="24sp" />
